--- a/flask-server/templates/StoreListView.html
+++ b/flask-server/templates/StoreListView.html
@@ -38,15 +38,15 @@
                                         <img src="../static/img/sample.PNG" width="295" height="125" />
                                     </div>
                                     <div class="listdesc">
-                                        <div class="StoreName">{{storedata[0].storename}}</div>
+                                        <div class="StoreName">{{storedata[1].storename}}</div>
                                         <div class="storelocation">
                                             <img src="../static/img/location.png" class="locationimg" width="18" height="18" />
-                                            <p class="locationtext">음식점 주소</p>
+                                            <p class="locationtext">{{storedata[1].location}}</p>
                                         </div>
-                                        <div class="Tag">#태그 #태그</div>
+                                        <div class="Tag">#{{storedata[1].food}}</div>
                                         <div class="heart">
                                             <img src="../static/img/heart.png" class="heartimg" width="14" height="16" />
-                                            <div class="heartnum">150</div>
+                                            <div class="heartnum">150</div>-->
                                         </div>
                                         <div class="reviewnum">리뷰""개</div>
                                     </div>
