동적 라우팅 작업 중

--- a/flask-server/templates/StoreDetail.html
+++ b/flask-server/templates/StoreDetail.html
@@ -25,10 +25,10 @@
             
                     <div class=info>
                         <div>
-                            <div class="Store">맛집 이름</div>
+                            <div class="Store">{{storedata.storename}}</div>
                             <div class="storelocation">
                                 <img src="samplelocation" class="locationimg" width="24" height="24" />
-                                "주소"
+                                {{storedata.location}}
                             </div>
                         </div>
                         <br />
