동적 라우팅 성공

--- a/flask-server/templates/StoreDetail.html
+++ b/flask-server/templates/StoreDetail.html
@@ -10,7 +10,7 @@
     <body>
         <div>
             <nav>
-                <link>리뷰 모아보기</link>
+                <a href="/ReviewAll">리뷰 모아보기</a>
                 <a href="/CreateStore">맛집 정보 추가하기</a>
                 <a href="/StoreListView">맛집 모아보기</a>
             </nav>
