--- a/flask-server/templates/StoreListView.html
+++ b/flask-server/templates/StoreListView.html
@@ -6,8 +6,12 @@
 </head>
 
 <body>
-    <div id="STORELISTVIEW">
-
+    <div class="STORELISTVIEW">
+        <!-- data=data;
+        total=total;
+        limit=limit;
+        page=page;
+        page_count=page_count; -->
     </div>
 </body>
 
