--- a/flask-server/templates/result_menu.html
+++ b/flask-server/templates/result_menu.html
@@ -1,7 +1,9 @@
 <html>
     <body>
         <h3>메뉴 Example</h3>
-        <p> 메뉴명: {{result.food}} <br/>
+        <p> 
+            가게명: {{storename}}
+            메뉴명: {{result.food}} <br/>
             가격: {{result.money}} <br/>
             영양성분: {{result.nutrient}} <br/>
             이미지 : <img src="{{img_path}}" alt="Menu Image"/><br/>
