맛집 세부정보, 메뉴 불러오기까지

--- a/flask-server/static/css/Storelist.css
+++ b/flask-server/static/css/Storelist.css
@@ -1,5 +1,5 @@
 .listbox {
-    display: flex;
+    display: inline-block;
     height: 130px;
     border: 1px solid rgb(225, 225, 225);
     justify-content: space-between;
