--- a/flask-server/templates/index.html
+++ b/flask-server/templates/index.html
@@ -1,1 +1,76 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/static/react/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/static/react/logo192.png"/><link rel="manifest" href="/static/react/manifest.json"/><title>맛집 웹사이트</title><script defer="defer" src="/static/react/js/main.bdaff923.js"></script><link href="/static/react/css/main.2bf6e5e9.css" rel="stylesheet"></head><body><noscript></noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" href="../static/css/index.css">
+	</head>
+	<body>
+<section class=section>
+    <div class=green>
+      <div class=hottitle>
+        <!-- <h2>HOT TOPIC</h2>-->
+        <div class=link-1>
+          <a class=hottopic href="#">
+            <span class=thick>HOT </span><span class=thin>TOPIC</span>
+          </a>
+          <p>금주의 인기 맛집</p>
+        </div>
+      </div>
+      <div class=hotlist_container>
+        <a href="StoreDetail.html" class=hotlist>
+          <img src="../static/img/sample.PNG" width="250" height="260" />
+          <div class=hotdesc>
+            <div class=upcontainer>
+              <div class=descname>식당1</div>
+              <!-- <div class = "star">별점</div> -->
+            </div>
+			  <div class=descloca><img src="../static/img/location.png" width="14" height="14"/>위치 신촌동 어쩌구</div>
+            <div class=menuname>메뉴 이름</div>
+            <div class=review>리뷰 본문 샘플입니다.</div>
+          </div>
+		 </a>
+        <a href="#" class=hotlist>
+          <img src="../static/img/sample.PNG" width="250" height="260" />
+          <div class=hotdesc>
+            <div class=upcontainer>
+              <div class=descname>식당2</div>
+              <!-- <div class = "star">별점</div> -->
+            </div>
+            <div class=descloca><img src="../static/img/location.png" width="14" height="14" />위치 신촌동 어쩌구</div>
+            <div class=menuname>메뉴 이름</div>
+            <div class=review>리뷰 본문 샘플입니다.</div>
+          </div>
+        </a>
+        <a href="#" class=hotlist>
+          <img src="../static/img/sample.PNG" width="250" height="260" />
+          <div class=hotdesc>
+            <div class=upcontainer>
+              <div class=descname>식당3</div>
+              <!-- <div class = "star">별점</div> -->
+            </div>
+            <div class=descloca><img src="../static/img/location.png" width="14" height="14" />위치 신촌동 어쩌구</div>
+            <div class=menuname>메뉴 이름</div>
+            <div class=review>리뷰 본문 샘플입니다.</div>
+          </div>
+        </a>
+        <a href="#" class=hotlist>
+          <img src="../static/img/sample.PNG" width="250" height="260" />
+          <div class=hotdesc>
+            <div class=upcontainer>
+              <div class=descname>식당 이름</div>
+              <!-- <div class = "star">별점</div> -->
+            </div>
+            <div class=descloca><img src="../static/img/location.png" width="14" height="14" />위치 신촌동 어쩌구</div>
+            <div class=menuname>메뉴 이름</div>
+            <div class=review>리뷰 본문 샘플입니다.</div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </section>
+	<div class=Hbox>
+        <a href="/StoreListView" class=homeButton>맛집 모아보기</a>
+        <a href="/CreateStore" class=homeButton>맛집 정보 추가하기</a>
+        <a href="/reviewAll" class=homeButton>리뷰 모아보기</a>
+      </div>
+	</body>
+</html>
