--- a/flask-server/static/css/MenuPost.css
+++ b/flask-server/static/css/MenuPost.css
@@ -16,7 +16,7 @@
 
 .ImagePart {
     display: flex;
-    width: 240px;
+    width: 50%;
     align-items: center;
     margin-left: 20px;
     margin-top: 20px;
